--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>خريطة معبر المصنع</title>
+  <link rel="icon" href="Emblem_of_Syria.svg.png" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="style.css" />
