--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,92 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <!-- ✅ شريط الإحصائيات لجميع الألوان -->
+  <div id="statsBar">
+    <div class="color-stat red">
+      <div class="color-dot red"></div>
+      <span id="redCount">0</span>
+    </div>
+    <div class="color-stat green">
+      <div class="color-dot green"></div>
+      <span id="greenCount">0</span>
+    </div>
+    <div class="color-stat blue">
+      <div class="color-dot blue"></div>
+      <span id="blueCount">0</span>
+    </div>
+    <div class="color-stat yellow">
+      <div class="color-dot yellow"></div>
+      <span id="yellowCount">0</span>
+    </div>
+    <div class="color-stat orange">
+      <div class="color-dot orange"></div>
+      <span id="orangeCount">0</span>
+    </div>
+    <div class="color-stat purple">
+      <div class="color-dot purple"></div>
+      <span id="purpleCount">0</span>
+    </div>
+    <div class="color-stat pink">
+      <div class="color-dot pink"></div>
+      <span id="pinkCount">0</span>
+    </div>
+  </div>
+
+  <!-- ✅ الخريطة -->
+  <div id="map"></div>
+
+  <!-- ✅ صندوق اختيار اللون والملاحظة -->
+  <div class="color-picker" id="colorPicker">
+    <textarea id="noteInput" placeholder="أدخل ملاحظة للنقطة..." rows="2"></textarea>
+    <div style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 10px;">
+      <div class="color-circle red" data-color="red" title="أحمر"></div>
+      <div class="color-circle green" data-color="green" title="أخضر"></div>
+      <div class="color-circle blue" data-color="blue" title="أزرق"></div>
+      <div class="color-circle yellow" data-color="yellow" title="أصفر"></div>
+      <div class="color-circle orange" data-color="orange" title="برتقالي"></div>
+      <div class="color-circle purple" data-color="purple" title="بنفسجي"></div>
+      <div class="color-circle pink" data-color="pink" title="وردي"></div>
+    </div>
+    <div style="display: flex; justify-content: space-between; gap: 10px; margin-top: 10px;">
+      <button id="savePoint" class="flex-grow">حفظ النقطة</button>
+      <button id="cancelPoint" class="flex-shrink">إلغاء</button>
+    </div>
+  </div>
+
+  <!-- ✅ تحميل مكتبة Leaflet والسكريبت الخاص بك -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="script.js"></script>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <title>خريطة معبر جديدة يابوس</title>
+  <link rel="icon" href="Emblem_of_Syria.svg.png" type="image/x-icon" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
   <div id="statsBar">
     <div class="color-stat red">
       <div class="color-dot red"></div>
@@ -42,4 +128,4 @@
 </html>
 
 
-
+ -->
